--- a/src/components/textBox.css
+++ b/src/components/textBox.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 .textBox{
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     font-size: 16px; 
     font-weight: 100;
     font-family:'Poppins', 'Franklin Gothic Medium', 'Arial Narrow', "Arial", "sans-serif";
@@ -8,7 +12,14 @@
 
 #user-input{
     font-family:'Poppins', 'Franklin Gothic Medium', 'Arial Narrow', "Arial", "sans-serif";
-    width: 10rem;
-    height: 1.5rem;
-    font-size:20px;
+    
+    border-radius: 3px;
+    font-size:25px;
+    background-color: rgb(255, 255, 255);
+    list-style: none;
+    line-height: 10px;
+    width: 15rem;
+    border-style: solid; 
+    border-color: #a4bdcb;
+   
 }
