--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,16 @@
     margin: 0;
 }
  
-#keyboard{
-   display: none;
+#keyBoard{
+   display: flex;
+   justify-content: center;
+   align-items: center;
 } 
+
+
+#container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
