Checking, Changing and typing works

--- a/src/components/textBox.css
+++ b/src/components/textBox.css
@@ -9,13 +9,12 @@
 
 #box-for-input{
     font-family:'Poppins', 'Franklin Gothic Medium', 'Arial Narrow', "Arial", "sans-serif";
-    
     border-radius: 3px;
     font-size:25px;
     background-color: rgb(255, 255, 255);
     list-style: none;
     height: 2.5rem;
-    width: 20rem;
+    width: 25rem;
     border-style: solid; 
     font-weight: 300;
     border-color: #a4bdcb;
@@ -24,4 +23,13 @@
 
 #answer{
     padding-left: 2px;
+    
+}
+
+#pre-defined{
+    padding-bottom: 5px;
+}
+
+#message{
+    padding-top: 10px;
 }
