--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,14 @@
    display: flex;
    justify-content: center;
    align-items: center;
+   padding-top: 5px;
 } 
 
 
-#container{
+.container{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 150px;
 }
