--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -7,6 +7,7 @@
     bottom: 0;
     width: 100%;
     height: 3rem;
+   
 }
 
 #linkedIn-gigi,
@@ -20,6 +21,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    box-shadow: 0 0 0 0.5px #717e85;
 }
 
 a {
