--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -21,7 +21,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    box-shadow: 0 0 0 0.5px #717e85;
+    box-shadow: 0 0 0 0.5px #a5a2a2;
 }
 
 a {
