--- a/src/components/keyboard.css
+++ b/src/components/keyboard.css
@@ -9,7 +9,7 @@ button {
     width: 3rem;
     height: 3rem;
     text-decoration: none;
-    border: 2px solid white;
+    border: 2px solid #ebeeef;
     background-color: #a4bdcb;
     font-size: 15px;
     
