--- a/src/components/keyboard.css
+++ b/src/components/keyboard.css
@@ -12,7 +12,7 @@ button {
     border: 2px solid #ebeeef;
     background-color: #a4bdcb;
     font-size: 15px;
-    
+
 }
 
 button:hover {
@@ -45,10 +45,22 @@ button:hover {
     width: 6rem;
 }
 
-#space{
+#space {
     width: 100%;
 }
-#space:hover{
+
+#space:hover {
     transform: scale(0.99) !important
 }
 
+@media (max-width:480px) {
+    #enter-button {
+        width: 4rem;
+    }
+
+    button {
+        width: 2rem;
+        height: 2rem;
+        font-size: 15px;
+    }
+}
