--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,7 @@ body{
 }
  
 #keyBoard{
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   padding-top: 5px;
+   display: none;
 } 
 
 
@@ -27,4 +24,12 @@ body{
     #footer{
         display: none;
     }
+    #keyBoard{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-top: 5px;
+     } 
+     
+
 }
