--- a/src/App.css
+++ b/src/App.css
@@ -10,13 +10,19 @@ body{
 #keyBoard{
    display: none;
  } 
+#score-howTo{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2rem;
 
+}
 .container{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 150px;
+    padding-top: 50px;
 }
 
 @media (max-width: 480px){
