--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,10 @@ body{
 }
  
 #keyBoard{
-   display: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 5px;
  } 
 #score-howTo{
     display: flex;
@@ -22,7 +25,6 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 50px;
 }
 
 @media (max-width: 480px){
