--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,6 +1,8 @@
+
 *{  
     box-sizing: border-box;
     margin: 0;
+   
 }
 
 body{
@@ -50,6 +52,11 @@ body{
         padding-top: 50px;
      }
      
-     
 
+}
+
+@media (max-height: 450px){
+    #footer{
+        display: none;
+    }
 }
