--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -12,7 +12,7 @@
 
 
 #flexable-footer {
-    padding: 0.5rem;
+    padding: 10px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -45,3 +45,4 @@ a {
 #copyright-logo {
     padding-right: 2px;
 }
+
