--- a/src/Components/Keyboard/keyboard.css
+++ b/src/Components/Keyboard/keyboard.css
@@ -2,7 +2,6 @@
 
 
 button {
-    font-family: 'Poppins', 'Segoe UI', 'Tahoma', 'Geneva', 'Verdana', 'sans-serif';
     border-radius: 5px;
     text-align: center;
     cursor: pointer;
@@ -12,6 +11,7 @@ button {
     border: 2px solid #ebeeef;
     background-color: #a4bdcb;
     font-size: 15px;
+    font-family:'Poppins', 'sans-serif';
 
 }
 
@@ -49,14 +49,3 @@ button:focus {
 }
 
 
-@media (max-width:500px) {
-    #enter-button {
-        width: 4rem;
-    }
-
-    button {
-        width: 2rem;
-        height: 2rem;
-        font-size: 15px;
-    }
-}
