Still figuring out mobile version

--- a/src/Components/Keyboard/keyboard.css
+++ b/src/Components/Keyboard/keyboard.css
@@ -6,11 +6,11 @@ button {
     text-align: center;
     cursor: pointer;
     text-decoration: none;
-    height: 3rem;
     border: 2px solid #ebeeef;
     background-color: #a4bdcb;
     font-size: 15px;
     font-family:'Poppins', 'sans-serif';
+  
 
 }
 
@@ -22,8 +22,9 @@ button:focus {
 
 .keyboard-grid {
     display: grid;
-    grid-template-columns: repeat(10, 50px);
-    
+    grid-gap: 1px;
+    grid-template-columns: repeat(10, 3.2rem);
+    grid-template-rows: repeat(4, 3rem);
     
 }
 
@@ -38,43 +39,3 @@ button:focus {
     grid-column: span 10;
     width: 100%;
 }
-
-
-
-
-@media (min-width: 410px) and (max-width: 451px){
-
-   button{
-    font-size: 15px;
-    height: 3rem;
-   }
-   .keyboard-grid{
-    grid-template-columns: repeat(10, 42.5px);
-   }
-  
-}
-
-@media (min-width: 350px) and (max-width: 409px){
-
-    button{
-     font-size: 15px;
-     height: 3.5rem;
-    }
-    .keyboard-grid{
-     grid-template-columns: repeat(10, 39px);
-    }
-   
- }
-
- @media (min-width: 300px) and (max-width: 349px){
-
-    button{
-     font-size: 15px;
-     height: 3.5rem;
-    }
-
-    .keyboard-grid{
-     grid-template-columns: repeat(10, 1fr);
-    }
-   
- }
