--- a/src/App/App.css
+++ b/src/App/App.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-color:#ebeeef;
+    background-color: #f5f5f5;
 }
  
 #keyBoard{
@@ -31,16 +31,19 @@ body{
 }
 
 
-
-@media (max-width: 480px){
+@media (max-width: 500px){
     #footer{
         display: none;
     }
+}
+@media (min-width: 375px) and (max-width:426px) {
+   
     #keyBoard{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding-top: 100px;
+        position: absolute;;
+        bottom: 0;
+        left: 50%;
+        right: 50%;
+        transition: transform(50%,50%)
      } 
      #how-to-box{
         display:none;
@@ -54,10 +57,4 @@ body{
      }
      
 
-}
-
-@media (max-height: 450px){
-    #footer{
-        display: none;
-    }
 }
