--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -72,7 +72,7 @@
         color: rgb(255, 255, 255);
         border-radius: 5px;
         padding: 0px;
-        width: 180px;
+        width: 1fr;
         height: auto;
         font-size: 10px;
         font-family: 'Poppins', 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
