--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,69 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 
-#menu-name {
-    display: none;
-}
 
-#after-click {
-    display: none;
-}
-
-@media (max-width:500px) {
-    #header-box {
-        position: relative;
-        background-color: rgb(59, 59, 59);
+@media (max-width:1200px) {
+    
+    #header-main, #after-open{
+        background-color: black;
         width: 100%;
-        height: 3.6rem;
+        height: 4rem;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding-left: 5px;
+        padding-right: 5px;
+        
+    }
+
+    #hamburger-menu,#hamburger-menu-opened, #mail, #copyright-logo{
+        color: white;
+        font-size: 2.5rem;
+    }
+
+    #website-name{
+        color:white;
+        font-size: 2rem;
         font-family: 'Poppins', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
+    }
+
+    #q-mark{
         color: white;
+        font-size: 2rem;
+        margin-top: 10px;
     }
 
-    #menu-name {
-        display: flex;
-        justify-content: space-between;
-        align-content: center;
-
+    #website-name, #hamburger-menu, #hamburger-menu-opened, #copyright-logo, #mail{
+        padding-top: 10px;
     }
-
-    #website-name {
-        text-align: center;
-        padding-top: 5px;
-        padding-right: 3px;
-        font-size: 25px;
-    }
-
-    #hamburger-menu {
-        font-size: 38px;
-        padding: 10px;
-    }
-
-    #after-click {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-
-    }
-
-    #envelope,
-    #copyright-logo {
-        text-decoration: none;
-        background-color: none;
-        color: #921d1d;
-        font-size: 38px;
-        color: white;
-
-    }
-
-    #copyright-logo {
-        padding-right: 10px;
-        font-size: 35px;
-    }
-
-    #question-mark {
-        padding-right: 8px;
-        font-size: 38px;
-
+    #after-clicked{
+        margin: 10px;
     }
 
     #explanation {
@@ -71,7 +45,8 @@
         text-align: center;
         color: rgb(255, 255, 255);
         border-radius: 5px;
-        padding: 0px;
+        padding-top: 0;
+        margin-top: 2px;
         width: 1fr;
         height: auto;
         font-size: 10px;
