--- a/src/Components/Textbox/textBox.css
+++ b/src/Components/Textbox/textBox.css
@@ -45,6 +45,9 @@
     font-family: 'Poppins', 'Franklin Gothic Medium', 'Arial NarrowCourier New', 'Courier', 'monospace', 'sans-serif';
 }
 
+#entire-textBox{
+    
+}
 
 @media screen and (max-width: 480px){
     #box-for-input{
