Change a couple of things

--- a/src/Components/Keyboard/keyboard.css
+++ b/src/Components/Keyboard/keyboard.css
@@ -103,3 +103,17 @@ button:focus {
     }
 
 }
+
+@media  screen and (min-height: 800px) and (min-width: 1000px){
+   
+    .keyboard-grid{
+
+    grid-template-columns: repeat(10,minmax(4rem,1fr));
+    grid-template-rows: repeat(4,minmax(4rem, 1fr));
+   
+    }
+    button{
+        font-size: 18px;   
+
+    }
+}
