--- a/src/App/privacy.css
+++ b/src/App/privacy.css
@@ -1,10 +1,50 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 *{
     box-sizing: border-box;
     margin: 0;
+   
 }
 
-#privacy{
+
+
+.privacy-div{
+    padding-top: 5rem;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+}
+
+#privacy{
+    padding-top: 10px;
+    font-size: 15px !important;
+   
+}
+
+p{
+    text-align: center;
+}
+
+#mainBox{
+ 
+    cursor: pointer;
+    font-size: 20px;
+    padding: 10px;
+    width: fit-content;
+    height: fit-content;
+    box-shadow:  1px  0.5px  0.5px 1.5px rgb(86, 32, 151);
+    border-radius: 10px;
+    font-family:'Poppins', 'Franklin Gothic Medium', 'Arial Narrow', 'Arial',' sans-serif';
+}
+
+
+
+#header{
+ 
+    border-radius: 10px;
+}
+
+#back{
+    font-family:'Poppins', 'Cambria', 'Cochin', 'Georgia', 'Times', 'Times New Roman', 'sans-serif';
 }
