--- a/src/Components/Textbox/textBox.css
+++ b/src/Components/Textbox/textBox.css
@@ -12,15 +12,16 @@
 }
 
 #box-for-input {
-    border-radius: 3px;   
+    border-radius: 3px;
     background-color: #ebeded;
     list-style: none;
-    height: 2.5rem;
-    width:25rem;
+    height: fit-content;
+    width: 25rem;
     border-style: solid;
     font-weight: 300;
     border-color: #a4bdcb;
     overflow: hidden;
+
     box-shadow: 2px 2px #a4bdcb;
     font-family: 'Poppins', 'Franklin Gothic Medium', 'Arial Narrow', "Arial", "sans-serif";
 }
@@ -44,23 +45,88 @@
 #message {
     padding: 10px;
     text-align: center;
+
     font-family: 'Poppins', 'Franklin Gothic Medium', 'Arial NarrowCourier New', 'Courier', 'monospace', 'sans-serif';
 }
 
 
-
-@media screen and (max-width: 480px){
-    #box-for-input{
+@media screen and (max-width: 480px) {
+    #box-for-input {
         width: 100%;
-        
+        height: fit-content;
     }
 
-    .entire-textBox{
+    .entire-textBox {
+        padding-top: 2rem;
         position: absolute;
-        top: 50%;
-        left:50%;
+        top: 40%;
+        left: 50%;
         transform: translate(-50%, -50%);
+
+    }
+
+    #answer {
+        font-size: 2rem;
+    }
+}
+
+
+@media screen and (max-width: 380px) {
+    #box-for-input {
+        width: 100%;
+        height: fit-content;
+    }
+
+    .entire-textBox {
+
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+    }
+
+    #answer {
+        font-size: 1.5rem;
     }
 
 }
 
+@media screen and (max-width: 320px) {
+    #box-for-input {
+        width: 100%;
+        height: fit-content;
+    }
+
+    .entire-textBox {
+        padding-top: 3.5rem;
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+    }
+
+    #answer {
+        font-size: 1.5rem;
+    }
+
+}
+
+
+@media screen and (min-height: 800px) and (min-width: 1000px) {
+    #box-for-input {
+        width: 100%;
+        height: fit-content;
+    }
+
+
+    #pre-defined {
+        font-size: 4rem;
+    }
+
+    #answer {
+        font-size: 2.8rem;
+    }
+
+}
