--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -102,3 +102,9 @@
         padding-top: 12px;
     }
 }
+
+@media screen and (max-width: 300px){
+    .explain-mobile{
+        width: 200px;
+    }
+}
