--- a/src/Components/Keyboard/keyboard.css
+++ b/src/Components/Keyboard/keyboard.css
@@ -114,7 +114,8 @@ button:focus {
    
     }
     button{
-        font-size: 18px;   
+        font-size: 18px; 
+        border-radius: 7px;  
 
     }
 }
