--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -70,26 +70,30 @@
         background-color: #a4bdcb;
         z-index: 2;
         position: absolute;
-        top: 42%;
+        top: 40%;
         left: 50%;
         height: fit-content;
         justify-content: center;
         align-items: center;
-        width: 300px;
-        font-size: 1rem;
+        width: 80%;
+        height: 30%;
+        font-size: 1.2rem;
         border-radius: 10px;
-        padding: 10px;
         transform: translate(-50%, -50%);
         font-family: 'Poppins', 'Franklin Gothic Medium', 'Arial Narrow', 'Arial', 'sans-serif';
     }
 
     #close-explanation{
         font-size: 1rem;
-        margin-top: 30px;
+        margin-top: 10px;
         width: fit-content;
         outline: 2px solid black;
         border: none;
         text-align: center;
+    }
+
+    #button-to-close{
+        padding-top: 20px;
     }
 }
 
@@ -100,10 +104,15 @@
         font-size: 1.5rem;
         padding-top: 12px;
     }
+
+    .explain-mobile{
+        font-size: 1rem;
+       }
+  
 }
 
 @media screen and (max-width: 300px){
-    .explain-mobile{
-        width: 200px;
-    }
+   .explain-mobile{
+    font-size: 1rem;
+   }
 }
