--- a/src/Components/Textbox/textBox.css
+++ b/src/Components/Textbox/textBox.css
@@ -49,7 +49,7 @@
 
 @media screen and (max-width: 480px) {
     #box-for-input {
-        width: 100%;
+        width: 20rem;
         height: fit-content;
     }
 
@@ -62,14 +62,14 @@
     }
 
     #answer {
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
 }
 
 
 @media screen and (max-width: 380px) {
     #box-for-input {
-        width: 100%;
+        width: 18rem;
         height: fit-content;
     }
 
@@ -88,8 +88,9 @@
 
 @media screen and (max-width: 320px) {
     #box-for-input {
-        width: 100%;
+        width: 15rem;
         height: fit-content;
+      
     }
 
     .entire-textBox {
@@ -101,13 +102,13 @@
     }
 
     #answer {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
 
 }
 
 
-@media screen and (min-height: 800px) and (min-width: 1000px) {
+@media screen and  (min-width: 700px) and (min-height: 800px) {
     #box-for-input {
         width: 40rem;
         height: fit-content;
@@ -116,6 +117,7 @@
     #pre-defined {
         font-size: 4rem;
         text-align: center;
+        width: 80%;
     }
 
     #answer {
