--- a/src/App/App.css
+++ b/src/App/App.css
@@ -64,3 +64,12 @@ body{
   }
 }
 
+@media screen and (min-width: 480px){
+    .container{
+        position: absolute;
+        top:50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+}
+
