Made mail logo functional

--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -40,10 +40,12 @@
         margin-top: 10px; 
     }
 
-    #hamburger-menu,#hamburger-menu-opened, #mail, #copyright-logo{
+    #hamburger-menu,#hamburger-menu-opened, #mail, #copyright-logo, #contact-mail-header{
         color: white;
         font-size: 2.5rem;
     }
+
+  
 
     #website-name{
         color:white;
