--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -6,12 +6,13 @@
     border-top-left-radius: 5px;
     bottom: 0;
     width: 100%;
-    height: 3rem;
+    height: 2.5rem;
 }
 
 
 #flexable-footer {
     padding: 10px;
+  
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -26,7 +27,7 @@ a {
 }
 
 #contact-mail {
-    font-size: 1.3rem;
+    font-size: 1rem;
     color: black !important;
     font-family: 'Poppins', 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
 }
@@ -59,7 +60,8 @@ a {
         font-size: 2rem;
     }
 
-    #envelope, #contact-mail{
+    #envelope, #contact-mail-header, #contact-mail{
         font-size: 2rem;
-    }  
+    }
+
 }
