--- a/src/App/App.css
+++ b/src/App/App.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #f5f5f5;
+    background-color: #1A1A1D;
 }
 
 #score-howTo {
@@ -43,7 +43,7 @@ body {
        display: flex;
        justify-content: center;
        align-items: center;
-       padding-top: 2rem;
+       padding-top: 1rem;
     }
 
    
