--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -6,18 +6,18 @@
     border-top-left-radius: 5px;
     bottom: 0;
     width: 100%;
-    height: 2.5rem;
+    height: 2.87rem;
 }
 
 
 #flexable-footer {
-    padding: 10px;
+    padding: 7.5px;
   
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    box-shadow: 0 0 0 0.5px #a5a2a2;
+    box-shadow:0.5px 0.8px 0.8px 2px white;
 }
 
 a {
@@ -26,14 +26,16 @@ a {
     color: #010101;
 }
 
+#contact-mail, #contact-mail-header, #pp, #copyright-logo{
+    color: white;
+}
 #contact-mail {
-    font-size: 1rem;
-    color: black !important;
+    font-size: 1.2rem;
     font-family: 'Poppins', 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
 }
-#envelope{
+#contact-mail-header {
     font-size: 1.3rem;
-    padding-right: 2px;
+    padding-right: 4px;
     cursor: pointer;
 }
 
@@ -42,8 +44,9 @@ a {
     font-family: 'Poppins', 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
 }
 
-#copyright-logo {
-    padding-right: 2px;
+
+#pp{
+    padding-left: 4px;
 }
 
 
