--- a/src/Components/HowTo/howToInstruction.css
+++ b/src/Components/HowTo/howToInstruction.css
@@ -3,6 +3,7 @@
 #circle-questionMark {
     font-size: 2rem;
     cursor: pointer;
+    color: white;
 }
 
 #explanation {
@@ -13,7 +14,7 @@
     padding: 2px;
     width: 200px;
     height: auto;
-    font-size: 10px;
+    font-size: 13px;
     font-family: 'Poppins', 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', 'sans-serif';
     cursor: pointer;
 }
