--- a/src/Components/Textbox/textBox.css
+++ b/src/Components/Textbox/textBox.css
@@ -5,7 +5,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    font-size: 16px;
+    font-size: 22.5px;
     font-weight: 100;
     font-family: 'Poppins', 'Franklin Gothic Medium', 'Arial Narrow', "Arial", "sans-serif";
 
@@ -13,15 +13,15 @@
 
 #box-for-input {
     border-radius: 3px;
-    background-color: #ebeded;
+    background-color: white;
     list-style: none;
     height: fit-content;
     width: 25rem;
     border-style: solid;
     font-weight: 300;
-    border-color: #a4bdcb;
+    border-color: black;
     overflow: hidden;
-    box-shadow: 2px 2px #a4bdcb;
+    box-shadow: 4px 3px black;
     word-wrap : break-word;
     word-break: break-all;
    
@@ -32,17 +32,19 @@
     text-align: left;
     padding-left: 3px;
     font-size: 25px;
+
 }
 
 #pre-defined {
-    color: #262a2c;
+    color: #c3073f;
     padding-bottom: 5px;
     text-align: center;
-    width: 250px;
+    width: fit-content;
     font-family: 'Poppins', 'Franklin Gothic Medium', 'Arial Narrow', "Arial", "sans-serif";
 }
 
 #message {
+    color: white;
     padding: 10px;
     text-align: center;
     font-family: 'Poppins', 'Franklin Gothic Medium', 'Arial NarrowCourier New', 'Courier', 'monospace', 'sans-serif';
@@ -51,20 +53,22 @@
 
 @media screen and (max-width: 480px) {
     #box-for-input {
-        width: 20rem;
+        width: 22rem;
         height: fit-content;
     }
 
     .entire-textBox {
-        padding-top: 2rem;
+        padding-top: 1.2rem;
         position: absolute;
         top: 40%;
         left: 50%;
         transform: translate(-50%, -50%);
     }
-
+    #pre-defined{
+        font-size: 2.5rem;
+    }
     #answer {
-        font-size: 1.5rem;
+        font-size: 2rem;
     }
 }
 
