--- a/src/Components/Timer/timer.css
+++ b/src/Components/Timer/timer.css
@@ -4,12 +4,12 @@
 .timer {
     
     text-align: center;
-    color: #626c76;
+    color: white;
     font-family: 'Poppins', 'Franklin Gothic Medium', 'Arial Narrow', 'Arial', 'sans-serif';
 }
 
 #time {
-    color: #92abba;
+    
     font-size: 3rem;
     font-family: 'Poppins', 'Franklin Gothic Medium', 'Arial Narrow', 'Arial', 'sans-serif';
 }
@@ -23,4 +23,14 @@
     #guessed {
         font-size: 2rem;
     }
+}
+
+@media screen and (max-width:480px){
+    #time{
+        font-size: 3.5rem;
+    }
+    #guessed{
+        font-size: 1.5rem;
+    }
+
 }
