--- a/src/App/App.css
+++ b/src/App/App.css
@@ -29,8 +29,8 @@ body {
 
 
 
-@media (max-width: 480px) {
-
+@media screen and (max-width: 480px) {
+    
     #footer {
         display: none;
     }
@@ -44,13 +44,15 @@ body {
        justify-content: center;
        align-items: center;
        padding-top: 1rem;
+        
+    }
+    #keyBrd{
+        
     }
 
+
+
    
-
-   
-
-
 }
 
 
